cc_library(
    name = "libc",
    visibility = ["//visibility:public"],
    deps = [
        "//src/libc/aeabi",
        "//src/libc/arpa/inet",
        "//src/libc/assert",
        "//src/libc/complex",
        "//src/libc/ctype",
        "//src/libc/dirent",
        "//src/libc/dlfcn",
        "//src/libc/errno",
        "//src/libc/execinfo",
        "//src/libc/fcntl",
        "//src/libc/fenv",
        "//src/libc/float10",
        "//src/libc/fmtmsg",
        "//src/libc/fnmatch",
        "//src/libc/iconv",
        "//src/libc/inttypes",
        "//src/libc/langinfo",
        "//src/libc/libgen",
        "//src/libc/libintl",
        "//src/libc/link",
        "//src/libc/locale",
        "//src/libc/math",
        "//src/libc/monetary",
        "//src/libc/mqueue",
        "//src/libc/net/if",
        "//src/libc/netdb",
        "//src/libc/netinet/in",
        "//src/libc/poll",
        "//src/libc/program",
        "//src/libc/pthread",
        "//src/libc/regex",
        "//src/libc/sched",
        "//src/libc/search",
        "//src/libc/semaphore",
        "//src/libc/setjmp",
        "//src/libc/signal",
        "//src/libc/stack_chk",
        "//src/libc/stdatomic",
        "//src/libc/stdio",
        "//src/libc/stdlib",
        "//src/libc/string",
        "//src/libc/strings",
        "//src/libc/sys/capsicum",
        "//src/libc/sys/ioctl",
        "//src/libc/sys/mman",
        "//src/libc/sys/resource",
        "//src/libc/sys/select",
        "//src/libc/sys/socket",
        "//src/libc/sys/stat",
        "//src/libc/sys/time",
        "//src/libc/sys/times",
        "//src/libc/sys/uio",
        "//src/libc/sys/utsname",
        "//src/libc/syslog",
        "//src/libc/threads",
        "//src/libc/time",
        "//src/libc/uchar",
        "//src/libc/unistd",
        "//src/libc/uv",
        "//src/libc/wchar",
        "//src/libc/wctype",
    ],
)
