load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "assert",
    srcs = ["assertion_failed.c"],
    visibility = ["//src/libc:__pkg__"],
)

cc_test_cloudabi(
    name = "assert_test",
    srcs = ["assert_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
)
