load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "complex",
    srcs = [
        "cimag.c",
        "cimagf.c",
        "cimagl.c",
        "creal.c",
        "crealf.c",
        "creall.c",
    ],
    visibility = ["//src/libc:__pkg__"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.c"],
    deps = ["//src/libc/testing:testing_main"],
) for test in ["complex"]]
