load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "ctype",
    srcs = [
        "ctype_impl.h",
        "isalnum.c",
        "isalnum_l.c",
        "isalpha.c",
        "isalpha_l.c",
        "isascii.c",
        "isblank.c",
        "isblank_l.c",
        "iscntrl.c",
        "iscntrl_l.c",
        "isdigit.c",
        "isdigit_l.c",
        "isgraph.c",
        "isgraph_l.c",
        "islower.c",
        "islower_l.c",
        "isprint.c",
        "isprint_l.c",
        "ispunct.c",
        "ispunct_l.c",
        "isspace.c",
        "isspace_l.c",
        "isupper.c",
        "isupper_l.c",
        "isxdigit.c",
        "isxdigit_l.c",
        "tolower.c",
        "tolower_l.c",
        "toupper.c",
        "toupper_l.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
) for test in ["ctype"]]
