load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "dirent",
    srcs = [
        "alphasort.c",
        "closedir.c",
        "dirent_impl.h",
        "dirfd.c",
        "fdclosedir.c",
        "fdopendir.c",
        "opendirat.c",
        "readdir.c",
        "rewinddir.c",
        "scandirat.c",
        "seekdir.c",
        "telldir.c",
        "versionsort.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.cc"],
    deps = ["//src/gtest_with_tmpdir"],
) for test in [
    "alphasort",
    "dirfd",
    "fdopendir",
    "opendirat",
    "rewinddir",
    "scandirat",
    "seekdir",
    "versionsort",
]]
