load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "dlfcn",
    srcs = ["dladdr.c"],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

cc_test_cloudabi(
    name = "dladdr_test",
    srcs = ["dladdr_test.cc"],
    linkopts = ["-Wl,--export-dynamic"],
    deps = ["@com_google_googletest//:gtest_main"],
)
