load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "fcntl",
    srcs = [
        "fcntl.c",
        "openat.c",
        "posix_fadvise.c",
        "posix_fallocate.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.cc"],
    deps = ["//src/gtest_with_tmpdir"],
) for test in [
    "fcntl",
    "openat",
    "posix_fadvise",
    "posix_fallocate",
]]
