load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "fenv",
    srcs = [
        "fe_dfl_env.c",
        "feclearexcept.c",
        "fegetenv.c",
        "fegetexceptflag.c",
        "fegetround.c",
        "feholdexcept.c",
        "fenv_impl.h",
        "feraiseexcept.c",
        "fesetenv.c",
        "fesetexceptflag.c",
        "fesetround.c",
        "fetestexcept.c",
        "feupdateenv.c",
    ],
    visibility = ["//src/libc:__pkg__"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
) for test in [
    "feholdexcept",
    "fesetround",
    "fetestexcept",
    "feupdateenv",
]]
