load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "fmtmsg",
    srcs = ["fmtmsg.c"],
    visibility = ["//src/libc:__pkg__"],
)

cc_test_cloudabi(
    name = "fmtmsg_test",
    srcs = ["fmtmsg_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
)
