load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "iconv",
    srcs = [
        "iconv.c",
        "iconv_close.c",
        "iconv_impl.h",
        "iconv_open.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

cc_test_cloudabi(
    name = "iconv_test",
    srcs = ["iconv_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
)
