load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "locale",
    srcs = [
        "collate/posix.c",
        "ctype/asciiplus.h",
        "ctype/gb2312.h",
        "ctype/ibm037.h",
        "ctype/iso_8859_1.h",
        "ctype/iso_8859_15.h",
        "ctype/us_ascii.c",
        "ctype/utf_8.c",
        "duplocale.c",
        "freelocale.c",
        "locale_c.c",
        "locale_c_unicode.c",
        "locale_compile_string.c",
        "locale_compile_wstring.c",
        "locale_get_compiled.c",
        "locale_translate_string.c",
        "localeconv.c",
        "localeconv_l.c",
        "lookup_ctype.c",
        "messages/en_us.c",
        "messages/nl_nl.h",
        "messages/ru_ru.h",
        "monetary/en_us.h",
        "monetary/nl_nl.h",
        "monetary/posix.c",
        "monetary/ru_ru.h",
        "newlocale.c",
        "numeric/en_us.h",
        "numeric/nl_nl.h",
        "numeric/posix.c",
        "numeric/ru_ru.h",
        "setlocale.c",
        "time/en_us.h",
        "time/fr_fr.h",
        "time/nl_nl.h",
        "time/posix.c",
        "time/ru_ru.h",
        "time/zh_cn.h",
        "timezone/tzdata.h",
        "timezone/utc.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
) for test in [
    "duplocale",
    "localeconv",
    "newlocale",
    "setlocale",
]]
