load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "monetary",
    srcs = [
        "strfmon.c",
        "strfmon_l.c",
        "vstrfmon.c",
        "vstrfmon_l.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

cc_test_cloudabi(
    name = "strfmon_test",
    srcs = ["strfmon_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
)
