load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "netdb",
    srcs = [
        "endprotoent.c",
        "endservent.c",
        "freeaddrinfo.c",
        "gai_strerror.c",
        "gai_strerror_l.c",
        "getaddrinfo.c",
        "getnameinfo.c",
        "getprotobyname.c",
        "getservbyname.c",
        "iana_port_numbers.c",
        "iana_protocol_numbers.h",
        "netdb_impl.h",
        "setprotoent.c",
        "setservent.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
) for test in [
    "gai_strerror",
    "getaddrinfo",
    "getnameinfo",
    "getprotobyname",
    "getprotobynumber",
    "getservbyname",
    "getservbyport",
]]
