load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "pthread",
    srcs = [
        "cxa_thread_atexit.c",
        "pthread_atfork.c",
        "pthread_attr_destroy.c",
        "pthread_attr_getdetachstate.c",
        "pthread_attr_getstacksize.c",
        "pthread_attr_init.c",
        "pthread_attr_setdetachstate.c",
        "pthread_attr_setstacksize.c",
        "pthread_barrier_destroy.c",
        "pthread_barrier_init.c",
        "pthread_barrier_wait.c",
        "pthread_barrierattr_destroy.c",
        "pthread_barrierattr_getpshared.c",
        "pthread_barrierattr_init.c",
        "pthread_barrierattr_setpshared.c",
        "pthread_cleanup_stack.c",
        "pthread_cond_broadcast.c",
        "pthread_cond_destroy.c",
        "pthread_cond_init.c",
        "pthread_cond_signal.c",
        "pthread_cond_timedwait.c",
        "pthread_cond_timedwait_relative_np.c",
        "pthread_cond_wait.c",
        "pthread_condattr_destroy.c",
        "pthread_condattr_getclock.c",
        "pthread_condattr_getpshared.c",
        "pthread_condattr_init.c",
        "pthread_condattr_setclock.c",
        "pthread_condattr_setpshared.c",
        "pthread_create.c",
        "pthread_detach.c",
        "pthread_equal.c",
        "pthread_exit.c",
        "pthread_getspecific.c",
        "pthread_join.c",
        "pthread_key_create.c",
        "pthread_key_delete.c",
        "pthread_key_freelist.c",
        "pthread_mutex_lock_pair_np.c",
        "pthread_mutexattr_getprotocol.c",
        "pthread_mutexattr_getrobust.c",
        "pthread_mutexattr_gettype.c",
        "pthread_mutexattr_setprotocol.c",
        "pthread_mutexattr_setrobust.c",
        "pthread_mutexattr_settype.c",
        "pthread_num_threads.c",
        "pthread_once.c",
        "pthread_rdlocks.c",
        "pthread_rwlock_destroy.c",
        "pthread_rwlock_init.c",
        "pthread_rwlock_rdlock.c",
        "pthread_rwlock_timedrdlock.c",
        "pthread_rwlock_timedwrlock.c",
        "pthread_rwlock_tryrdlock.c",
        "pthread_rwlock_trywrlock.c",
        "pthread_rwlock_unlock.c",
        "pthread_rwlock_wrlock.c",
        "pthread_rwlockattr_destroy.c",
        "pthread_rwlockattr_getpshared.c",
        "pthread_rwlockattr_init.c",
        "pthread_rwlockattr_setpshared.c",
        "pthread_self.c",
        "pthread_setspecific.c",
        "pthread_specifics.c",
        "pthread_spin_init.c",
        "pthread_terminate.c",
        "thread_atexit_list.c",
    ],
    # pthread_create() cannot use SafeStack, as it is responsible for
    # initializing the unsafe stack.
    copts = ["-fno-sanitize=safe-stack"],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

[cc_test_cloudabi(
    name = test + "_test",
    srcs = [test + "_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
) for test in [
    "pthread_atfork",
    "pthread_attr_init",
    "pthread_attr_setdetachstate",
    "pthread_attr_setstacksize",
    "pthread_barrier",
    "pthread_barrierattr_init",
    "pthread_cleanup",
    "pthread_cond_broadcast",
    "pthread_cond_signal",
    "pthread_cond_timedwait",
    "pthread_cond_timedwait_relative_np",
    "pthread_condattr_init",
    "pthread_condattr_setclock",
    "pthread_detach",
    "pthread_equal",
    "pthread_join",
    "pthread_mutex",
    "pthread_mutex_lock_pair_np",
    "pthread_mutex_timedlock",
    "pthread_mutexattr_init",
    "pthread_mutexattr_setprotocol",
    "pthread_mutexattr_setrobust",
    "pthread_mutexattr_settype",
    "pthread_once",
    "pthread_rwlock",
    "pthread_rwlock_rdlock",
    "pthread_rwlockattr_init",
    "pthread_setspecific",
    "pthread_spin",
]]
