load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "regex",
    srcs = [
        "regcomp.c",
        "regcomp_l.c",
        "regerror.c",
        "regerror_l.c",
        "regex_compile.h",
        "regex_execute.h",
        "regexec.c",
        "regexec_l.c",
        "regfree.c",
        "regncomp.c",
        "regncomp_l.c",
        "regnexec.c",
        "regnexec_l.c",
        "regwcomp.c",
        "regwcomp_l.c",
        "regwexec.c",
        "regwncomp.c",
        "regwncomp_l.c",
        "regwnexec.c",
    ],
    visibility = ["//src/libc:__pkg__"],
    deps = ["//src/common"],
)

cc_test_cloudabi(
    name = "regerror_test",
    srcs = ["regerror_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
)
