load("@org_cloudabi_bazel_toolchains_cloudabi//:cc.bzl", "cc_test_cloudabi")

cc_library(
    name = "sched",
    srcs = ["sched_yield.c"],
    visibility = ["//src/libc:__pkg__"],
    deps = ["@org_cloudabi_cloudabi//headers:cloudabi_syscalls"],
)

cc_test_cloudabi(
    name = "sched_yield_test",
    srcs = ["sched_yield_test.cc"],
    deps = ["@com_google_googletest//:gtest_main"],
)
